<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="146dp"
            android:layout_height="100dp"
            android:contentDescription="nama"
            app:srcCompat="@drawable/img_logo" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Bio1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usn"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Bio2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Bio3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter3"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:backgroundTint="@color/purple_200"
            android:text="Submit"
            android:textSize="16sp" />

    </TableRow>

</TableLayout>