<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:src="@drawable/jangkar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Button 3"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/purple_200"
            android:layout_margin="16dp" />


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button 4"
            android:backgroundTint="@color/black"
            android:layout_margin="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MATCH PARENT"
        app:cornerRadius="10dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn2"
        android:layout_gravity="right"
        app:cornerRadius="10dp"
        android:layout_marginRight="16dp"
        />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        app:cornerRadius="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Btn1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:backgroundTint="@color/teal_200"
            android:layout_height="66dp"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:textSize="30dp"
            android:text="@string/lt" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="188dp"
            android:layout_height="31dp"
            android:layout_margin="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/Txbawah" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:backgroundTint="@color/teal_200"
            android:layout_height="66dp"
            android:layout_gravity="right"
            android:layout_marginLeft="16dp"
            android:layout_margin="16dp"
            android:text="@string/gt"
            android:textSize="30dp"
            />
    </LinearLayout>
</LinearLayout>
